...
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_menu">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_study_overview24dp"
            android:title="@string/activities" />
        <item
            android:id="@+id/nav_questionnaires"
            android:icon="@drawable/ic_questionnaire_24dp"
            android:title="@string/questionnaires" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_impressum"
                android:icon="@drawable/ic_impressum_24dp"
                android:title="@string/imprint" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us_24dp"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/logout" />

        </menu>
    </item>

...
