<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.HomeActivity"
    tools:openDrawer="start">

    <ScrollView
        android:id="@+id/home_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"

                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:visibility="visible"
                app:layout_scrollFlags="scroll|enterAlways" />


            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/homeRoot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16sp">

                    <TextView
                        android:id="@+id/homeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:paddingBottom="@dimen/activity_horizontal_margin"
                        android:text="@string/home_text"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/logoKrems"
                        android:layout_width="124dip"
                        android:layout_height="124dip"
                        android:layout_gravity="center_horizontal"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:textAlignment="center"
                        app:srcCompat="@drawable/logo_uni_krems" />

                    <ImageView
                        android:id="@+id/logoUlm"
                        android:layout_width="280dip"
                        android:layout_height="124dip"
                        android:layout_gravity="center_horizontal"
                        android:padding="@dimen/activity_horizontal_margin"
                        app:srcCompat="@drawable/logo_uni_ulm" />

                    <ImageView
                        android:id="@+id/logoNuernberg"
                        android:layout_width="124dip"
                        android:layout_height="124dip"
                        android:layout_gravity="center_horizontal"
                        android:padding="@dimen/activity_horizontal_margin"
                        app:srcCompat="@drawable/logo_uni_nuernberg" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        android:background="@color/white" />
</androidx.drawerlayout.widget.DrawerLayout>