...
    <string name="title_activity_login">Login</string>
    <string name="Email">Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="password_confirm">Passwort bestätigen</string>
    <string name="username">Nutzername</string>
    <string name="register_link_send">Die Registrierigung wurde durchgeführt und Ihnen wurde <br /> ein Link zur Verifizierung an die angegebenen Email gesendet. Bitte bestätigen
        Sie Ihren Account indem Sie darauf klicken. <br />Danach können Sie sich einloggen.</string>
    <string name="resend_verification_link">Verifizierungs-Link noch einmal senden</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="sex">Geschlecht</string>
...
Prof. Dr. Manfred Reichert (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
Dr. Rüdiger Pryss (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br> </p>

<p>Wenn Sie Fragen, Feedback oder Anregungen zu dem Projekt haben, kontaktieren sie uns bitte unter <a href="info@trackyourstress.org."</a> </p>]]>
    </string>
    <string name="Back">Zurück</string>
    <string name="notify401"> Zugangsdaten ungültig. Bitte überprüfen Sie Ihre Eingaben </string>
    <string name="notify403">Nutzer wurde noch nicht verifiziert.</string>
    <string name="password_short">Passwort zu kurz. Bitte versuchen Sie es noch einmal</string>
    <string name="network_error">Netzwerk-Fehler aufgetreten. Überprüfen Sie Ihre Internetverbindung</string>
    <string name="profile_not_loaded">Profildaten können nicht geladen werden</string>
    <string name="daily_notifications_off">Tägliche Benachrichtigungen AUS</string>
    <string name="monthly_notifications_off">Monatliche Benachrichtigungen AUS</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
...
    <string name="quesitionnaire_submitted">Fragebogen abgeschickt</string>
    <string name="answersheet_could_not_be_submitted">Fragebogen konnte nicht abgeschickt werden</string>
    <string name="answers_missing">Es fehlen noch Antworten</string>
    <string name="username_needed">Nutzername benötigt</string>
    <string name="double_click_back">Drücken Sie erneut Zurück um zu beenden</string>
    <string name="gender">Geschlecht</string>
    <string name="login">Login</string>
</resources>
